[project]
name = "zro_theme"
authors = [
    { name = "ZRO Lab SA", email = "engineering@zrolab.com"}
]
description = "ZRO Site theme overlay for Frappe / ERPNext — graphite-ink + glacier-surface palette, ZRO branding, construction-photography login."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
